; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/hccontrol/extr_node.c_hci_read_node_packet_mask.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/hccontrol/extr_node.c_hci_read_node_packet_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ng_btsocket_hci_raw_node_packet_mask = type { i32 }

@SIOC_HCI_RAW_NODE_GET_PACKET_MASK = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Packet mask: %#04x\0A\00", align 1
@OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hci_read_node_packet_mask(i32 %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca %struct.ng_btsocket_hci_raw_node_packet_mask, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %9 = call i32 @memset(%struct.ng_btsocket_hci_raw_node_packet_mask* %8, i32 0, i32 4)
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @SIOC_HCI_RAW_NODE_GET_PACKET_MASK, align 4
  %12 = call i64 @ioctl(i32 %10, i32 %11, %struct.ng_btsocket_hci_raw_node_packet_mask* %8, i32 4)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @ERROR, align 4
  store i32 %15, i32* %4, align 4
  br label %22

16:                                               ; preds = %3
  %17 = load i32, i32* @stdout, align 4
  %18 = getelementptr inbounds %struct.ng_btsocket_hci_raw_node_packet_mask, %struct.ng_btsocket_hci_raw_node_packet_mask* %8, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @fprintf(i32 %17, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* @OK, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %16, %14
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @memset(%struct.ng_btsocket_hci_raw_node_packet_mask*, i32, i32) #1

declare dso_local i64 @ioctl(i32, i32, %struct.ng_btsocket_hci_raw_node_packet_mask*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
